--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ As well as starring in many movies such as The China Syndrome, Nine to Five, and
 </div>    
 </div>
 
+
 </div>
 
     
@@ -97,10 +98,10 @@ Throughout her two weeks in North Vietnam, Fonda make radio broadcast documentin
 </p>
 </div>
     
-<div class="pg5" id="after">
-<center>
+<div class="pg5">
+    <center>
     <div class="headd" id="after">
-        <h2>What Happens Next?</h2> 
+        <h2>What Happened After?</h2> 
         <hr width="250">
     </div>
 </center>
