--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@ Throughout her two weeks in North Vietnam, Fonda make radio broadcast documentin
     <center>
     <div class="headd" id="after">
         <h2>What Happened After?</h2> 
-        <hr width="250">
+        <hr width="600" style="padding-bottom:300px;">
     </div>
 </center>
-    
+    <p style="font-size:100px;">.</p>
+    <p style="font-size:100px;">.</p>
+    <p style="font-size:100px; padding-bottom:200px;">.</p>
 <p style=" -ms-transform: rotate(7deg); /* IE 9 */
     -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
     transform: rotate(7deg);color:red; font-size:40px;">Communist</p>
