--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@ Throughout her two weeks in North Vietnam, Fonda make radio broadcast documentin
     <p style="font-size:100px; padding-bottom:200px;">.</p>
 <p style=" -ms-transform: rotate(7deg); /* IE 9 */
     -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
-    transform: rotate(7deg);color:red; font-size:40px;">Communist</p>
+    transform: rotate(7deg);color:#e74c3c; font-size:40px;">Communist</p>
     
 <p style=" -ms-transform: rotate(-7deg); /* IE 9 */
     -webkit-transform: rotate(-7deg); /* Chrome, Safari, Opera */
-    transform: rotate(-7deg);color:red; font-size:40px; padding-left:700px;">Traitor</p>
+    transform: rotate(-7deg);color:#e74c3c; font-size:40px; padding-left:700px;">Traitor</p>
     
 <p style=" -ms-transform: rotate(-27deg); /* IE 9 */
     -webkit-transform: rotate(-27deg); /* Chrome, Safari, Opera */
-    transform: rotate(-27deg);color:red; font-size:40px; padding-left:500px;">Terrorist</p> 
+    transform: rotate(-27deg);color:#e74c3c; font-size:40px; padding-left:500px;">Terrorist</p> 
 
 <p> After her actions, she was treated as a terrorist.</p>
 <p> She was looked looked down upon.</p>
