--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/bootstrap.css">
     <link rel="stylesheet" href="CSS/animate.css">
     <link rel="stylesheet" href="CSS/font-awesome.css">
-    <link rel="stylesheet" href="CSS/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     
     <link rel="stylesheet" href="CSS/main.css">
 </head>
