--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ As well as starring in many movies such as The China Syndrome, Nine to Five, and
     </div>
 </center>
 <div class="pg3">
-<p style = "color:red;">
+<p style = "font-size:44px; color:red;">
 "Revolution is an act of love; we are the children of revolution, born to be rebels. It runs in our blood." - JANE FONDA    
 </p>
 <p>
