--- a/index.html
+++ b/index.html
@@ -70,9 +70,13 @@ As well as starring in many movies such as The China Syndrome, Nine to Five, and
     </div>
 </center>
 <div class="pg3">
+
+<blockquote>
 <p style = "font-size:44px; color:#27ae60; padding-bottom:20px;">
 "Revolution is an act of love; we are the children of revolution, born to be rebels. It runs in our blood." - JANE FONDA    
 </p>
+</blockquote>
+
 <p>
      During the early 1970's, Jane Gave her strong support for the Black Panthers, run by Huey Newton
 </p>    
