--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@ Throughout her two weeks in North Vietnam, Fonda make radio broadcast documentin
 Citation:
 Huffington, A. (2012). Huffington post.
 
-Ashburn, Lauren. "'Hanoi Jane' Is Michelle Obama’s Role Model." Fox News. Fox, 23 Jan. 2014. Web. <http://www.foxnews.com/politics/2014/01/23/hanoi-jane-is-michelle-obamas-role-model/>.
+Ashburn, Lauren. "'Hanoi Jane' Is Michelle Obama’s Role Model." Fox News. Fox, 23 Jan. 2014. Web. http://www.foxnews.com/politics/2014/01/23/hanoi-jane-is-michelle-obamas-role-model/.
 
-"Hanoi Jane - Victory Girls Blog." Victory Girls Blog RSS. 5 Apr. 2013. Web. 20 Feb. 2015. <http://victorygirlsblog.com/hanoi-jane>.
+"Hanoi Jane - Victory Girls Blog." Victory Girls Blog RSS. 5 Apr. 2013. Web. 20 Feb. 2015. http://victorygirlsblog.com/hanoi-jane.
 
 */
 
